# mcp-imap-server

./: LICENSE  README.md  pyproject.toml
src/mcp_imap_server/: __init__.py  cli.py  core.py  credentials.py  main.py  server.py
src/mcp_imap_server/cli/: __init__.py  commands.py  testing.py
src/mcp_imap_server/core/: __init__.py  auth.py  compose.py  emails.py  folders.py  state.py
src/mcp_imap_server/server/: __init__.py  auth.py  compose.py  state.py
src/mcp_imap_server/server/email/: __init__.py  attachments.py  basic_operations.py  bulk_operations.py  content_processing.py  content_processor.py  search.py
src/mcp_imap_server/server/folder/: __init__.py  management.py  pagination.py  statistics.py
src/mcp_imap_server/shared/: __init__.py  credentials.py
