[project]
name = "mcp-imap-server"
version = "0.2.0"
description = "A comprehensive Model Context Protocol (MCP) server for full-featured IMAP email management with advanced search, bulk operations, and secure credential storage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "imap-tools>=1.11.0",
    "mcp[cli]>=1.10.1",
    "platformdirs>=4.3.8",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
    "tomlkit>=0.13.0",
    "html-to-markdown[lxml]>=1.8.0",
]

[project.scripts]
mcp-imap-server = "mcp_imap_server.server:main"
mcp-imap-credentials = "mcp_imap_server.cli.commands:main"

[tool.ruff.lint]
select = ["TRY", "RUF", "UP", "E4", "E7", "E9", "F", "B", "TCH"]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]
